--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
-	"[php]": {
+    "editor.autoClosingBrackets": "always",
+    "editor.bracketPairColorization.enabled": true,
+    "editor.formatOnPaste": true,
 
+    "files.eol": "\n",
+    "files.encoding": "utf8",
+    "files.insertFinalNewline": false,
+    "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true,
+    "files.associations": {
+        "*.tst": "php"
+    },
+
+	"[php]": {
+        "editor.cursorStyle": "line",
+        "editor.cursorSmoothCaretAnimation": true,
+        "editor.cursorBlinking": "expand"
 	}
 }
