--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,7 @@ end_of_line              = lf
 insert_final_newline     = false
 trim_trailing_whitespace = true
 indent_style             = space
+tab_width                = 4
 
 [*.php]
 indent_size = 4
