Changed value of "editor.formatOnPaste" option.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "editor.autoClosingBrackets": "always",
     "editor.bracketPairColorization.enabled": true,
-    "editor.formatOnPaste": true,
+    "editor.formatOnPaste": false,
 
     "files.eol": "\n",
     "files.encoding": "utf8",
